feat: improvements in layout

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
           rel="stylesheet"
   />
-  <title>Migresc</title>
+  <title>IEPEM</title>
   <meta name="description" content="" />
 </head>
 
